# solanity

./: .gitignore  Makefile  README.md  mk  run
ci/: build.sh  buildkite.yml
ci/docker-sgx/: Dockerfile  build.sh
src/: Makefile  config.h  gpu-common.mk
src/cuda-crypt/: aes_locl.h
src/cuda-ecc-ed25519/: ed25519.h  fe.cu  fe.h  ge.cu  ge.h  gpu_ctx.cu  gpu_ctx.h  main.cu  precomp_data.h  sc.cu  sc.h  sign.cu  vanity.cu  verify.cu
src/cuda-headers/: gpu_common.h
src/cuda-poh-verify/: poh_verify.cu
src/cuda-sha256/: sha256.cu
src/jerasure-sys/: Cargo.toml  build.rs  gf-complete  jerasure
src/sgx/: build.sh
src/sgx-ecc-ed25519/: build.sh
src/sgx/signing/: signing.edl  signing_internal.h  signing_public.h  signing_trusted.c  signing_untrusted.c
src/sgx/test/: signing_test.c
